--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,68 @@
-gym
-matplotlib
-pybullet
+absl-py==0.6.1
+astor==0.7.1
+astroid==2.0.4
+atari-py==0.1.7
+autoflake==1.2
+baseline==0.2.1
+baselines==0.1.5
+certifi==2018.10.15
+cffi==1.11.5
+chardet==3.0.4
+Click==7.0
+cloudpickle==0.6.1
+cycler==0.10.0
+Cython==0.29
+dill==0.2.8.2
+future==0.17.1
+gast==0.2.0
+glfw==1.7.0
+grpcio==1.16.1
+gym==0.10.9
+h5py==2.8.0
+idna==2.7
+imageio==2.4.1
+isort==4.3.4
+jedi==0.13.1
+joblib==0.13.0
+Keras-Applications==1.0.6
+Keras-Preprocessing==1.0.5
+kiwisolver==1.0.1
+lazy-object-proxy==1.3.1
+lockfile==0.12.2
+Markdown==3.0.1
+matplotlib==3.0.2
+mccabe==0.6.1
+mpi4py==3.0.0
+mujoco-py==1.50.1.68
+numpy==1.15.4
+opencv-python==3.4.3.18
+parso==0.3.1
+Pillow==5.3.0
+pluggy==0.8.0
+progressbar2==3.38.0
+protobuf==3.6.1
+pycparser==2.19
+pyflakes==2.0.0
+pyglet==1.3.2
+pylint==2.1.1
+PyOpenGL==3.1.0
+pyparsing==2.3.0
+python-dateutil==2.7.5
+python-jsonrpc-server==0.0.2
+python-language-server==0.21.2
+python-utils==2.3.0
+pyzmq==17.1.2
+requests==2.20.1
+scipy==1.1.0
+six==1.11.0
+tensorboard==1.12.0
+tensorflow==1.12.0
+termcolor==1.1.0
+torch==0.4.1
+tqdm==4.28.1
+typed-ast==1.1.0
+urllib3==1.24.1
+Werkzeug==0.14.1
+wrapt==1.10.11
+yapf==0.24.0
+zmq==0.0.0
