--- a/environment.yml
+++ b/environment.yml
@@ -1,5 +1,6 @@
 name: ppo
 channels:
+  - pytorch
   - defaults
 dependencies:
   - _tflow_select=2.3.0=mkl
@@ -13,32 +14,36 @@ dependencies:
   - bzip2=1.0.6=h14c3975_5
   - c-ares=1.15.0=h7b6447c_1
   - ca-certificates=2019.1.23=0
-  - certifi=2018.11.29=py36_0
-  - cffi=1.11.5=py36he75722e_1
+  - certifi=2019.3.9=py36_0
   - chardet=3.0.4=py36_1
   - conda=4.6.4=py36_0
   - conda-build=3.17.8=py36_0
   - cryptography=2.5=py36h1ba5d50_0
   - cudatoolkit=10.0.130=0
   - cudnn=7.3.1=cuda10.0_0
-  - cython=0.29.5=py36he6710b0_0
-  - decorator=4.3.2=py36_0
+  - cycler=0.10.0=py36_0
+  - dbus=1.13.6=h746ee38_0
+  - expat=2.2.6=he6710b0_0
   - filelock=3.0.10=py36_0
+  - fontconfig=2.13.0=h9420a91_0
+  - freetype=2.9.1=h8a8886c_1
   - gast=0.2.2=py36_0
+  - glib=2.56.2=hd408876_0
   - glob2=0.6=py36_1
   - grpcio=1.16.1=py36hf8bcb03_1
+  - gst-plugins-base=1.14.0=hbbd80ab_1
+  - gstreamer=1.14.0=hb453b48_1
   - h5py=2.9.0=py36h7918eee_0
   - hdf5=1.10.4=hb1b8bf9_0
   - icu=58.2=h9c2bf20_1
   - idna=2.8=py36_0
   - intel-openmp=2019.1=144
-  - ipython=7.2.0=py36h39e3cac_0
   - ipython_genutils=0.2.0=py36_0
-  - isort=4.3.4=py36_0
-  - jedi=0.13.2=py36_0
   - jinja2=2.10=py36_0
+  - jpeg=9b=h024ee3a_2
   - keras-applications=1.0.6=py36_0
   - keras-preprocessing=1.0.5=py36_0
+  - kiwisolver=1.0.1=py36hf484d3e_0
   - lazy-object-proxy=1.3.1=py36h14c3975_2
   - libarchive=3.3.3=h5d8350f_5
   - libedit=3.1.20181209=hc058e9b_0
@@ -46,30 +51,31 @@ dependencies:
   - libgcc-ng=8.2.0=hdf63c60_1
   - libgfortran-ng=7.3.0=hdf63c60_0
   - liblief=0.9.0=h7725739_2
+  - libpng=1.6.36=hbc83047_0
   - libprotobuf=3.6.1=hd408876_0
   - libstdcxx-ng=8.2.0=hdf63c60_1
+  - libuuid=1.0.3=h1bed415_2
+  - libxcb=1.13=h1bed415_1
   - libxml2=2.9.9=he19cac6_0
   - lz4-c=1.8.1.2=h14c3975_0
   - lzo=2.10=h49e0be7_2
   - markdown=3.0.1=py36_0
   - markupsafe=1.1.0=py36h7b6447c_0
+  - matplotlib=3.0.3=py36h5429711_0
   - mccabe=0.6.1=py36_1
   - mkl=2019.1=144
   - mkl_fft=1.0.10=py36ha843d7b_0
   - mkl_random=1.0.2=py36hd81dba3_0
   - ncurses=6.1=he6710b0_1
   - ninja=1.8.2=py36h6bb024c_1
-  - numpy=1.15.4=py36h7e9f1db_0
-  - numpy-base=1.15.4=py36hde5b4d6_0
-  - openssl=1.1.1a=h7b6447c_0
-  - parso=0.3.2=py36_0
+  - openssl=1.1.1b=h7b6447c_1
+  - pandas=0.24.2=py36he6710b0_0
   - patchelf=0.9=he6710b0_3
+  - pcre=8.43=he6710b0_0
   - pexpect=4.6.0=py36_0
   - pickleshare=0.7.5=py36_0
   - pip=19.0.1=py36_0
   - pkginfo=1.5.0.1=py36_0
-  - prompt_toolkit=2.0.8=py_0
-  - protobuf=3.6.1=py36he6710b0_0
   - psutil=5.5.0=py36h7b6447c_0
   - ptyprocess=0.6.0=py36_0
   - py-lief=0.9.0=py36h7725739_2
@@ -78,17 +84,23 @@ dependencies:
   - pygments=2.3.1=py36_0
   - pylint=2.2.2=py36_0
   - pyopenssl=19.0.0=py36_0
+  - pyparsing=2.3.1=py36_0
+  - pyqt=5.9.2=py36h05f1152_2
   - pysocks=1.6.8=py36_0
   - python=3.6.8=h0371630_0
+  - python-dateutil=2.8.0=py36_0
   - python-libarchive-c=2.8=py36_6
-  - pytorch=1.0.1=cuda100py36he554f03_0
+  - pytorch=1.0.1=py3.6_cuda10.0.130_cudnn7.4.2_2
+  - pytorch-cpu=1.0.1=py3.6_cpu_2
   - pytz=2018.9=py36_0
   - pyyaml=3.13=py36h14c3975_0
+  - qt=5.9.7=h5867ecd_1
   - readline=7.0=h7b6447c_5
   - requests=2.21.0=py36_0
   - ruamel_yaml=0.15.46=py36h14c3975_0
   - scipy=1.2.1=py36h7c811a0_0
   - setuptools=40.8.0=py36_0
+  - sip=4.19.8=py36hf484d3e_0
   - six=1.12.0=py36_0
   - soupsieve=1.7.1=py36_0
   - sqlite=3.26.0=h7b6447c_0
@@ -97,6 +109,7 @@ dependencies:
   - tensorflow-base=1.12.0=mkl_py36h3c3e929_0
   - termcolor=1.1.0=py36_1
   - tk=8.6.8=hbc83047_0
+  - tornado=6.0.2=py36h7b6447c_0
   - tqdm=4.31.1=py_0
   - traitlets=4.3.2=py36_0
   - typed-ast=1.3.1=py36h7b6447c_0
@@ -111,12 +124,29 @@ dependencies:
   - zlib=1.2.11=h7b6447c_3
   - zstd=1.3.7=h0b5b093_0
   - pip:
+    - appnope==0.1.0
+    - autoflake==1.2
+    - cffi==1.12.2
+    - cython==0.29.6
+    - decorator==4.4.0
     - future==0.17.1
-    - gym==0.11.0
+    - glfw==1.7.1
+    - gym==0.12.0
+    - imageio==2.5.0
     - ipdb==0.11
-    - libarchive-c==2.8
-    - lief==0.9.0
+    - ipython==7.3.0
+    - isort==4.3.15
+    - jedi==0.13.3
+    - lockfile==0.12.2
+    - numpy==1.16.2
     - opencv-python==3.4.3.18
+    - parso==0.3.4
+    - pillow==5.4.1
+    - prompt-toolkit==2.0.9
+    - protobuf==3.7.0
+    - pyflakes==2.1.1
     - pyglet==1.3.2
+    - seaborn==0.9.0
     - tensorboardx==1.6
+prefix: /home/ethanbro/miniconda3/envs/ppo
 
