--- a/requirements.txt
+++ b/requirements.txt
@@ -63,7 +63,7 @@ termcolor==1.1.0
 torch==0.4.1
 tqdm==4.28.1
 typed-ast==1.1.0
-urllib3==1.24.1
+urllib3>=1.24.2
 Werkzeug==0.14.1
 wrapt==1.10.11
 yapf==0.24.0
