--- a/requirements.txt
+++ b/requirements.txt
@@ -58,7 +58,7 @@ requests==2.20.1
 scipy==1.1.0
 six==1.11.0
 tensorboard==1.12.0
-tensorflow==1.12.0
+tensorflow>=1.12.1
 termcolor==1.1.0
 torch==0.4.1
 tqdm==4.28.1
