got task_gridworld working in keyboard_control

--- a/gridworld_env/json/8x8Tasks.json
+++ b/gridworld_env/json/8x8Tasks.json
@@ -9,6 +9,9 @@
         "        ",
         "        "
     ],
-    "objects": ["p", "s", "c", "g"],
+    "object_types": ["pig", "sheep", "cat", "greenbot"],
+    "n_objects": 20,
+    "n_obstacles": 10,
+    "n_subtasks": 5,
     "class": "TasksGridWorld"
 }
