add max episode steps to 4x4

--- a/gridworld_env/json/4x4Tasks.json
+++ b/gridworld_env/json/4x4Tasks.json
@@ -9,5 +9,6 @@
     "n_objects": 5,
     "n_obstacles": 2,
     "n_subtasks": 3,
-    "class": "TasksGridWorld"
+    "class": "TasksGridWorld",
+    "max_episode_steps": 63
 }
