add max_episode_steps to 8x8Tasks

--- a/gridworld_env/json/8x8Tasks.json
+++ b/gridworld_env/json/8x8Tasks.json
@@ -1,17 +1,17 @@
 {
     "text_map": [
-        "        ",
-        "        ",
-        "        ",
-        "        ",
-        "        ",
-        "        ",
-        "        ",
-        "        "
+        "        ", "        ", "        ", "        ", "        ", "        ",
+        "        ", "        "
     ],
     "object_types": ["pig", "sheep", "cat", "greenbot"],
-    "n_objects": 20,
-    "n_obstacles": 10,
-    "n_subtasks": 5,
-    "class": "TasksGridWorld"
+    "n_objects":
+    20,
+    "n_obstacles":
+    10,
+    "n_subtasks":
+    5,
+    "class":
+    "TasksGridWorld",
+    "max_episode_steps":
+    225
 }
