pause on implementation in order to focus on code for teacher policies

--- a/gridworld_env/json/4x4Subtasks.json
+++ b/gridworld_env/json/4x4Subtasks.json
@@ -4,6 +4,6 @@
     "n_objects": 5,
     "n_obstacles": 2,
     "n_subtasks": 2,
-    "class": "TasksGridWorld",
+    "class": "SubtasksGridWorld",
     "max_episode_steps": 63
 }
