--- a/gridworld_env/json/10x10Subtasks.json
+++ b/gridworld_env/json/10x10Subtasks.json
@@ -23,6 +23,6 @@
     "n_objects": 17,
     "n_obstacles": 8,
     "n_subtasks": 2,
-    "class": "TasksGridWorld",
+    "class": "SubtasksGridWorld",
     "max_episode_steps": 80
 }
