a ton of changes in preparation for teacher training. Currently have ppo running. Testing on 4x4Tasks/2-x2task-subtasks/5 to ensure it works

--- a/gridworld_env/json/4x4Subtasks.json
+++ b/gridworld_env/json/4x4Subtasks.json
@@ -1,9 +1,17 @@
 {
-    "text_map": ["    ", "    ", "    ", "    "],
-    "object_types": ["pig", "sheep", "cat", "greenbot"],
+    "text_map": [
+        "    ",
+        "    ",
+        "    ",
+        "    "],
+    "object_types": [
+        "pig",
+        "sheep",
+        "cat",
+        "greenbot"],
     "n_objects": 5,
     "n_obstacles": 2,
     "n_subtasks": 2,
     "class": "SubtasksGridWorld",
-    "max_episode_steps": 63
+    "max_episode_steps": 30
 }
