--- a/gridworld_env/json/4x4Subtasks.json
+++ b/gridworld_env/json/4x4Subtasks.json
@@ -1,17 +1,9 @@
 {
-    "text_map": [
-        "    ",
-        "    ",
-        "    ",
-        "    "],
-    "object_types": [
-        "pig",
-        "sheep",
-        "cat",
-        "greenbot"],
+    "text_map": ["    ", "    ", "    ", "    "],
+    "object_types": ["pig", "sheep", "cat", "greenbot"],
     "n_objects": 5,
     "n_obstacles": 2,
-    "n_subtasks": 2,
+    "n_subtasks": 1,
     "class": "SubtasksGridWorld",
-    "max_episode_steps": 30
+    "max_episode_steps": 63
 }
