--- a/gridworld_env/json/4x4Subtasks.json
+++ b/gridworld_env/json/4x4Subtasks.json
@@ -5,5 +5,6 @@
     "n_obstacles": 2,
     "n_subtasks": 1,
     "class": "SubtasksGridWorld",
-    "max_episode_steps": 63
+    "max_episode_steps": 63,
+    "random_obstacles": true
 }
