--- a/gridworld_env/json/4x4Subtasks.json
+++ b/gridworld_env/json/4x4Subtasks.json
@@ -4,6 +4,12 @@
     "n_objects": 5,
     "n_obstacles": 2,
     "n_subtasks": 1,
+    "task_types":[
+            "visit",
+            "pick-up",
+            "transform"
+        ],
+    "max_task_count": 3,
     "class": "SubtasksGridWorld",
     "max_episode_steps": 63,
     "random_obstacles": true
