--- a/gridworld_env/json/10x10Subtasks.json
+++ b/gridworld_env/json/10x10Subtasks.json
@@ -24,7 +24,7 @@
     "n_obstacles": 8,
     "n_subtasks": 2,
     "task_counts": [1, 2, 3],
-    "task_types": ["visit", "pick-up", "transform"],
+    "interactions": ["visit", "pick-up", "transform"],
     "class": "SubtasksGridWorld",
     "max_episode_steps": 80
 }
