--- a/gridworld_env/json/4x4Subtasks.json
+++ b/gridworld_env/json/4x4Subtasks.json
@@ -4,7 +4,7 @@
     "n_objects": 2,
     "n_obstacles": 2,
     "n_subtasks": 3,
-    "task_types": ["visit", "pick-up", "transform"],
+    "interactions": ["visit", "pick-up", "transform"],
     "max_task_count": 3,
     "class_": "SubtasksGridWorld",
     "max_episode_steps": 63,
