--- a/environment.yml
+++ b/environment.yml
@@ -1,151 +1,134 @@
 name: ppo
 channels:
   - pytorch
+  - conda-forge
   - defaults
 dependencies:
   - _tflow_select=2.3.0=mkl
-  - absl-py=0.7.0=py36_0
-  - asn1crypto=0.24.0=py36_0
-  - astor=0.7.1=py36_0
-  - astroid=2.1.0=py36_0
-  - backcall=0.1.0=py36_0
-  - beautifulsoup4=4.7.1=py36_1
+  - absl-py=0.7.1=py37_0
+  - astor=0.7.1=py_0
   - blas=1.0=mkl
   - bzip2=1.0.6=h14c3975_5
   - c-ares=1.15.0=h7b6447c_1
-  - ca-certificates=2019.5.15=0
-  - certifi=2019.3.9=py36_0
-  - chardet=3.0.4=py36_1
-  - conda=4.6.4=py36_0
-  - conda-build=3.17.8=py36_0
-  - cryptography=2.5=py36h1ba5d50_0
+  - ca-certificates=2019.6.16=hecc5488_0
+  - cairo=1.14.12=h8948797_3
+  - certifi=2019.6.16=py37_0
+  - cffi=1.12.3=py37h2e261b9_0
   - cudatoolkit=10.0.130=0
   - cudnn=7.3.1=cuda10.0_0
-  - cycler=0.10.0=py36_0
   - dbus=1.13.6=h746ee38_0
-  - decorator=4.4.0=py36_1
   - expat=2.2.6=he6710b0_0
-  - filelock=3.0.10=py36_0
+  - ffmpeg=4.0.2=ha0c5888_2
   - fontconfig=2.13.0=h9420a91_0
+  - freeglut=3.0.0=hf484d3e_1005
   - freetype=2.9.1=h8a8886c_1
-  - gast=0.2.2=py36_0
+  - gast=0.2.2=py_0
   - glib=2.56.2=hd408876_0
-  - glob2=0.6=py36_1
-  - grpcio=1.16.1=py36hf8bcb03_1
+  - gmp=6.1.2=hf484d3e_1000
+  - gnutls=3.5.19=h2a4e5f8_1
+  - graphite2=1.3.13=hf484d3e_1000
+  - grpcio=1.16.1=py37hf8bcb03_1
   - gst-plugins-base=1.14.0=hbbd80ab_1
   - gstreamer=1.14.0=hb453b48_1
-  - h5py=2.9.0=py36h7918eee_0
-  - hdf5=1.10.4=hb1b8bf9_0
+  - h5py=2.8.0=py37h3010b51_1003
+  - harfbuzz=1.9.0=he243708_1001
+  - hdf5=1.10.2=hc401514_3
   - icu=58.2=h9c2bf20_1
-  - idna=2.8=py36_0
   - intel-openmp=2019.1=144
-  - ipython_genutils=0.2.0=py36_0
-  - jinja2=2.10=py36_0
+  - isort=4.3.20=py37_0
+  - jasper=2.0.14=h07fcdf6_1
   - jpeg=9b=h024ee3a_2
-  - keras-applications=1.0.6=py36_0
-  - keras-preprocessing=1.0.5=py36_0
-  - kiwisolver=1.0.1=py36hf484d3e_0
-  - lazy-object-proxy=1.3.1=py36h14c3975_2
+  - keras-applications=1.0.7=py_1
+  - keras-preprocessing=1.0.9=py_1
   - libarchive=3.3.3=h5d8350f_5
   - libedit=3.1.20181209=hc058e9b_0
   - libffi=3.2.1=hd88cf55_4
   - libgcc-ng=8.2.0=hdf63c60_1
+  - libgfortran=3.0.0=1
   - libgfortran-ng=7.3.0=hdf63c60_0
+  - libglu=9.0.0=hf484d3e_1000
+  - libiconv=1.15=h516909a_1005
   - liblief=0.9.0=h7725739_2
+  - libopencv=3.4.2=hb342d67_1
   - libpng=1.6.36=hbc83047_0
   - libprotobuf=3.6.1=hd408876_0
   - libstdcxx-ng=8.2.0=hdf63c60_1
+  - libtiff=4.0.9=he6b73bb_1
   - libuuid=1.0.3=h1bed415_2
   - libxcb=1.13=h1bed415_1
   - libxml2=2.9.9=he19cac6_0
   - lz4-c=1.8.1.2=h14c3975_0
   - lzo=2.10=h49e0be7_2
-  - markdown=3.0.1=py36_0
-  - markupsafe=1.1.0=py36h7b6447c_0
-  - matplotlib=3.0.3=py36h5429711_0
-  - mccabe=0.6.1=py36_1
+  - markdown=2.6.11=py_0
   - mkl=2019.1=144
-  - mkl_fft=1.0.10=py36ha843d7b_0
-  - mkl_random=1.0.2=py36hd81dba3_0
+  - mkl_fft=1.0.10=py37ha843d7b_0
+  - mkl_random=1.0.2=py37hd81dba3_0
+  - mock=3.0.5=py37_0
   - ncurses=6.1=he6710b0_1
-  - ninja=1.8.2=py36h6bb024c_1
-  - numpy=1.16.2=py36h7e9f1db_0
-  - numpy-base=1.16.2=py36hde5b4d6_0
+  - nettle=3.3=0
+  - ninja=1.9.0=py37hfd86e86_0
+  - numpy-base=1.16.2=py37hde5b4d6_0
+  - opencv=3.4.2=py37h6fd60c2_1
+  - openh264=1.8.0=hdbcaa40_1000
   - openssl=1.1.1c=h7b6447c_1
-  - pandas=0.24.2=py36he6710b0_0
   - patchelf=0.9=he6710b0_3
   - pcre=8.43=he6710b0_0
-  - pexpect=4.6.0=py36_0
-  - pickleshare=0.7.5=py36_0
-  - pip=19.0.1=py36_0
-  - pkginfo=1.5.0.1=py36_0
-  - psutil=5.5.0=py36h7b6447c_0
-  - ptyprocess=0.6.0=py36_0
-  - py-lief=0.9.0=py36h7725739_2
-  - pycosat=0.6.3=py36h14c3975_0
-  - pycparser=2.19=py36_0
-  - pygments=2.3.1=py36_0
-  - pylint=2.2.2=py36_0
-  - pyopenssl=19.0.0=py36_0
-  - pyparsing=2.3.1=py36_0
-  - pyqt=5.9.2=py36h05f1152_2
-  - pysocks=1.6.8=py36_0
-  - python=3.6.8=h0371630_0
-  - python-dateutil=2.8.0=py36_0
-  - python-libarchive-c=2.8=py36_6
-  - pytorch=1.1.0=py3.6_cuda10.0.130_cudnn7.5.1_0
-  - pytz=2018.9=py36_0
-  - pyyaml=3.13=py36h14c3975_0
+  - pip=19.1.1=py37_0
+  - pixman=0.38.0=h516909a_1003
+  - protobuf=3.6.1=py37he6710b0_0
+  - py-opencv=3.4.2=py37hb342d67_1
+  - pycparser=2.19=py37_0
+  - python=3.7.3=h0371630_0
+  - pytorch=1.1.0=py3.7_cuda10.0.130_cudnn7.5.1_0
   - qt=5.9.7=h5867ecd_1
   - readline=7.0=h7b6447c_5
-  - requests=2.21.0=py36_0
-  - ruamel_yaml=0.15.46=py36h14c3975_0
-  - scipy=1.2.1=py36h7c811a0_0
-  - setuptools=40.8.0=py36_0
-  - sip=4.19.8=py36hf484d3e_0
-  - six=1.12.0=py36_0
-  - soupsieve=1.7.1=py36_0
-  - sqlite=3.26.0=h7b6447c_0
-  - tensorboard=1.12.2=py36he6710b0_0
-  - tensorflow=1.12.0=mkl_py36h69b6ba0_0
-  - tensorflow-base=1.12.0=mkl_py36h3c3e929_0
-  - termcolor=1.1.0=py36_1
+  - setuptools=41.0.1=py37_0
+  - six=1.12.0=py37_0
+  - sqlite=3.28.0=h7b6447c_0
+  - tensorboard=1.13.1=py37_0
+  - tensorflow=1.13.1=py37_0
+  - tensorflow-estimator=1.13.0=py_0
+  - termcolor=1.1.0=py_2
   - tk=8.6.8=hbc83047_0
-  - tornado=6.0.2=py36h7b6447c_0
   - tqdm=4.31.1=py_0
-  - traitlets=4.3.2=py36_0
-  - typed-ast=1.3.1=py36h7b6447c_0
-  - urllib3=1.24.1=py36_0
-  - wcwidth=0.1.7=py36_0
-  - werkzeug=0.14.1=py36_0
-  - wheel=0.32.3=py36_0
-  - wrapt=1.11.1=py36h7b6447c_0
+  - werkzeug=0.15.4=py_0
+  - wheel=0.33.4=py37_0
+  - x264=1!152.20180806=h14c3975_0
+  - xorg-fixesproto=5.0=h14c3975_1002
+  - xorg-inputproto=2.3.2=h14c3975_1002
+  - xorg-kbproto=1.0.7=h14c3975_1002
+  - xorg-libx11=1.6.7=h14c3975_1000
+  - xorg-libxau=1.0.9=h14c3975_0
+  - xorg-libxext=1.3.4=h516909a_0
+  - xorg-libxfixes=5.0.3=h516909a_1004
+  - xorg-libxi=1.7.10=h516909a_0
+  - xorg-xextproto=7.3.0=h14c3975_1002
+  - xorg-xproto=7.0.31=h14c3975_1007
   - xz=5.2.4=h14c3975_4
   - yaml=0.1.7=had09818_2
-  - yapf=0.26.0=py36_0
   - zlib=1.2.11=h7b6447c_3
   - zstd=1.3.7=h0b5b093_0
   - pip:
-    - appnope==0.1.0
-    - autoflake==1.2
-    - cffi==1.12.2
-    - cython==0.29.6
+    - backcall==0.1.0
+    - cloudpickle==1.2.1
+    - decorator==4.4.0
     - future==0.17.1
-    - glfw==1.7.1
-    - gym==0.12.0
-    - imageio==2.5.0
-    - ipdb==0.11
-    - ipython==7.3.0
-    - isort==4.3.15
-    - jedi==0.13.3
-    - lockfile==0.12.2
-    - opencv-python==3.4.3.18
-    - pillow==5.4.1
+    - gym==0.13.0
+    - ipython==7.5.0
+    - ipython-genutils==0.2.0
+    - jedi==0.14.0
+    - numpy==1.16.4
+    - opencv-python==4.1.0.25
+    - parso==0.5.0
+    - pexpect==4.7.0
+    - pickleshare==0.7.5
     - prompt-toolkit==2.0.9
-    - protobuf==3.7.0
-    - pyflakes==2.1.1
+    - ptyprocess==0.6.0
     - pyglet==1.3.2
-    - seaborn==0.9.0
-    - tensorboardx==1.6
+    - pygments==2.4.2
+    - scipy==1.3.0
+    - tensorboardx==1.7
+    - traitlets==4.3.2
+    - wcwidth==0.1.7
 prefix: /home/ethanbro/miniconda3/envs/ppo
 
