refactor subtasks_gridworld eliminating perform_iteration

--- a/gridworld_env/json/4x4Subtasks.json
+++ b/gridworld_env/json/4x4Subtasks.json
@@ -1,9 +1,9 @@
 {
     "text_map": ["    ", "    ", "    ", "    "],
     "object_types": ["pig", "sheep", "cat", "greenbot"],
-    "n_objects": 2,
+    "min_objects": 0,
     "n_obstacles": 2,
-    "n_subtasks": 2,
+    "n_subtasks": 3,
     "interactions": ["visit", "pick-up", "transform"],
     "max_task_count": 2,
     "class_": "SubtasksGridWorld",
