--- a/tune.yaml
+++ b/tune.yaml
@@ -34,7 +34,7 @@ idle_timeout_minutes: 5
 provider:
     type: local
     head_ip: 141.212.113.173
-    worker_ips: [141.212.113.173]
+    worker_ips: []
 
 # How Ray will authenticate with newly launched nodes.
 auth:
