--- a/environment.yml
+++ b/environment.yml
@@ -4,15 +4,16 @@ channels:
   - conda-forge
   - defaults
 dependencies:
+  - _libgcc_mutex=0.1=main
   - _tflow_select=2.3.0=mkl
   - absl-py=0.7.1=py37_0
   - astor=0.7.1=py_0
   - blas=1.0=mkl
   - bzip2=1.0.6=h14c3975_5
   - c-ares=1.15.0=h7b6447c_1
-  - ca-certificates=2019.6.16=hecc5488_0
+  - ca-certificates=2019.5.15=1
   - cairo=1.14.12=h8948797_3
-  - certifi=2019.6.16=py37_0
+  - certifi=2019.6.16=py37_1
   - cffi=1.12.3=py37h2e261b9_0
   - cudatoolkit=10.0.130=0
   - cudnn=7.3.1=cuda10.0_0
@@ -67,19 +68,20 @@ dependencies:
   - ncurses=6.1=he6710b0_1
   - nettle=3.3=0
   - ninja=1.9.0=py37hfd86e86_0
-  - numpy-base=1.16.2=py37hde5b4d6_0
   - opencv=3.4.2=py37h6fd60c2_1
   - openh264=1.8.0=hdbcaa40_1000
   - openssl=1.1.1c=h7b6447c_1
+  - pandas=0.25.0=py37he6710b0_0
   - patchelf=0.9=he6710b0_3
   - pcre=8.43=he6710b0_0
   - pip=19.1.1=py37_0
   - pixman=0.38.0=h516909a_1003
-  - protobuf=3.6.1=py37he6710b0_0
   - py-opencv=3.4.2=py37hb342d67_1
   - pycparser=2.19=py37_0
   - python=3.7.3=h0371630_0
+  - python-dateutil=2.8.0=py37_0
   - pytorch=1.1.0=py3.7_cuda10.0.130_cudnn7.5.1_0
+  - pytz=2019.1=py_0
   - qt=5.9.7=h5867ecd_1
   - readline=7.0=h7b6447c_5
   - setuptools=41.0.1=py37_0
@@ -109,26 +111,58 @@ dependencies:
   - zlib=1.2.11=h7b6447c_3
   - zstd=1.3.7=h0b5b093_0
   - pip:
+    - appdirs==1.4.3
+    - atomicwrites==1.3.0
+    - attrs==19.1.0
     - backcall==0.1.0
+    - black==19.3b0
+    - chardet==3.0.4
+    - click==7.0
     - cloudpickle==1.2.1
+    - colorama==0.4.1
     - decorator==4.4.0
+    - filelock==3.0.12
+    - funcsigs==1.0.2
     - future==0.17.1
-    - gym==0.13.0
+    - gym==0.14.0
+    - idna==2.8
+    - importlib-metadata==0.18
+    - ipdb==0.12
     - ipython==7.5.0
     - ipython-genutils==0.2.0
-    - jedi==0.14.0
+    - jedi==0.13.3
+    - more-itertools==7.2.0
     - numpy==1.16.4
     - opencv-python==4.1.0.25
+    - packaging==19.1
     - parso==0.5.0
     - pexpect==4.7.0
     - pickleshare==0.7.5
+    - pluggy==0.12.0
     - prompt-toolkit==2.0.9
+    - protobuf==3.9.1
+    - psutil==5.6.3
     - ptyprocess==0.6.0
+    - py==1.8.0
+    - py-spy==0.1.11
     - pyglet==1.3.2
     - pygments==2.4.2
+    - pyparsing==2.4.2
+    - pytest==5.0.1
+    - python-jsonrpc-server==0.1.2
+    - python-language-server==0.27.0
+    - pyyaml==5.1.2
+    - ray==0.7.3
+    - redis==3.3.7
+    - requests==2.22.0
     - scipy==1.3.0
+    - setproctitle==1.1.10
     - tensorboardx==1.7
+    - toml==0.10.0
     - traitlets==4.3.2
+    - urllib3==1.25.3
     - wcwidth==0.1.7
+    - yapf==0.27.0
+    - zipp==0.5.1
 prefix: /home/ethanbro/miniconda3/envs/ppo
 
