--- a/environment.yml
+++ b/environment.yml
@@ -1,168 +1,108 @@
 name: ppo
 channels:
   - pytorch
-  - conda-forge
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
-  - _tflow_select=2.3.0=mkl
-  - absl-py=0.7.1=py37_0
-  - astor=0.7.1=py_0
+  - asn1crypto=0.24.0=py37_0
+  - backcall=0.1.0=py37_0
   - blas=1.0=mkl
-  - bzip2=1.0.6=h14c3975_5
-  - c-ares=1.15.0=h7b6447c_1
+  - bzip2=1.0.8=h7b6447c_0
   - ca-certificates=2019.5.15=1
-  - cairo=1.14.12=h8948797_3
   - certifi=2019.6.16=py37_1
   - cffi=1.12.3=py37h2e261b9_0
+  - chardet=3.0.4=py37_1
+  - conda=4.7.11=py37_0
+  - conda-package-handling=1.3.11=py37_0
+  - cryptography=2.7=py37h1ba5d50_0
   - cudatoolkit=10.0.130=0
-  - cudnn=7.3.1=cuda10.0_0
-  - dbus=1.13.6=h746ee38_0
-  - expat=2.2.6=he6710b0_0
-  - ffmpeg=4.0.2=ha0c5888_2
-  - fontconfig=2.13.0=h9420a91_0
-  - freeglut=3.0.0=hf484d3e_1005
-  - freetype=2.9.1=h8a8886c_1
-  - gast=0.2.2=py_0
-  - glib=2.56.2=hd408876_0
-  - gmp=6.1.2=hf484d3e_1000
-  - gnutls=3.5.19=h2a4e5f8_1
-  - graphite2=1.3.13=hf484d3e_1000
-  - grpcio=1.16.1=py37hf8bcb03_1
-  - gst-plugins-base=1.14.0=hbbd80ab_1
-  - gstreamer=1.14.0=hb453b48_1
-  - h5py=2.8.0=py37h3010b51_1003
-  - harfbuzz=1.9.0=he243708_1001
-  - hdf5=1.10.2=hc401514_3
-  - icu=58.2=h9c2bf20_1
-  - intel-openmp=2019.1=144
-  - isort=4.3.20=py37_0
-  - jasper=2.0.14=h07fcdf6_1
-  - jpeg=9b=h024ee3a_2
-  - keras-applications=1.0.7=py_1
-  - keras-preprocessing=1.0.9=py_1
+  - cython=0.29.12=py37he6710b0_0
+  - decorator=4.4.0=py37_1
+  - idna=2.8=py37_0
+  - intel-openmp=2019.4=243
+  - ipython=7.7.0=py37h39e3cac_0
+  - ipython_genutils=0.2.0=py37_0
+  - jedi=0.13.3=py37_0
   - libarchive=3.3.3=h5d8350f_5
   - libedit=3.1.20181209=hc058e9b_0
   - libffi=3.2.1=hd88cf55_4
-  - libgcc-ng=8.2.0=hdf63c60_1
-  - libgfortran=3.0.0=1
+  - libgcc-ng=9.1.0=hdf63c60_0
   - libgfortran-ng=7.3.0=hdf63c60_0
-  - libglu=9.0.0=hf484d3e_1000
-  - libiconv=1.15=h516909a_1005
-  - liblief=0.9.0=h7725739_2
-  - libopencv=3.4.2=hb342d67_1
-  - libpng=1.6.36=hbc83047_0
-  - libprotobuf=3.6.1=hd408876_0
-  - libstdcxx-ng=8.2.0=hdf63c60_1
-  - libtiff=4.0.9=he6b73bb_1
-  - libuuid=1.0.3=h1bed415_2
-  - libxcb=1.13=h1bed415_1
-  - libxml2=2.9.9=he19cac6_0
+  - libstdcxx-ng=9.1.0=hdf63c60_0
+  - libxml2=2.9.9=hea5a465_1
   - lz4-c=1.8.1.2=h14c3975_0
   - lzo=2.10=h49e0be7_2
-  - markdown=2.6.11=py_0
-  - mkl=2019.1=144
-  - mkl_fft=1.0.10=py37ha843d7b_0
+  - magma-cuda100=2.5.1=1
+  - mkl=2019.4=243
+  - mkl-include=2019.4=243
+  - mkl-service=2.0.2=py37h7b6447c_0
+  - mkl_fft=1.0.14=py37ha843d7b_0
   - mkl_random=1.0.2=py37hd81dba3_0
-  - mock=3.0.5=py37_0
   - ncurses=6.1=he6710b0_1
-  - nettle=3.3=0
   - ninja=1.9.0=py37hfd86e86_0
-  - opencv=3.4.2=py37h6fd60c2_1
-  - openh264=1.8.0=hdbcaa40_1000
+  - numpy=1.16.4=py37h7e9f1db_0
+  - numpy-base=1.16.4=py37hde5b4d6_0
   - openssl=1.1.1c=h7b6447c_1
   - pandas=0.25.0=py37he6710b0_0
-  - patchelf=0.9=he6710b0_3
-  - pcre=8.43=he6710b0_0
+  - parso=0.5.0=py_0
+  - pexpect=4.7.0=py37_0
+  - pickleshare=0.7.5=py37_0
   - pip=19.1.1=py37_0
-  - pixman=0.38.0=h516909a_1003
-  - py-opencv=3.4.2=py37hb342d67_1
+  - prompt_toolkit=2.0.9=py37_0
+  - ptyprocess=0.6.0=py37_0
+  - pycosat=0.6.3=py37h14c3975_0
   - pycparser=2.19=py37_0
-  - python=3.7.3=h0371630_0
+  - pygments=2.4.2=py_0
+  - pyopenssl=19.0.0=py37_0
+  - pysocks=1.7.0=py37_0
+  - python=3.7.4=h265db76_1
   - python-dateutil=2.8.0=py37_0
-  - pytorch=1.1.0=py3.7_cuda10.0.130_cudnn7.5.1_0
-  - pytz=2019.1=py_0
-  - qt=5.9.7=h5867ecd_1
+  - python-libarchive-c=2.8=py37_11
+  - pytorch=1.2.0=py3.7_cuda10.0.130_cudnn7.6.2_0
+  - pytz=2019.2=py_0
+  - pyyaml=5.1.1=py37h7b6447c_0
   - readline=7.0=h7b6447c_5
+  - requests=2.22.0=py37_0
+  - ruamel_yaml=0.15.46=py37h14c3975_0
+  - scipy=1.3.0=py37h7c811a0_0
   - setuptools=41.0.1=py37_0
   - six=1.12.0=py37_0
-  - sqlite=3.28.0=h7b6447c_0
-  - tensorboard=1.13.1=py37_0
-  - tensorflow=1.13.1=py37_0
-  - tensorflow-estimator=1.13.0=py_0
-  - termcolor=1.1.0=py_2
+  - sqlite=3.29.0=h7b6447c_0
   - tk=8.6.8=hbc83047_0
-  - tqdm=4.31.1=py_0
-  - werkzeug=0.15.4=py_0
+  - tqdm=4.32.1=py_0
+  - traitlets=4.3.2=py37_0
+  - typing=3.6.4=py37_0
+  - urllib3=1.24.2=py37_0
+  - wcwidth=0.1.7=py37_0
   - wheel=0.33.4=py37_0
-  - x264=1!152.20180806=h14c3975_0
-  - xorg-fixesproto=5.0=h14c3975_1002
-  - xorg-inputproto=2.3.2=h14c3975_1002
-  - xorg-kbproto=1.0.7=h14c3975_1002
-  - xorg-libx11=1.6.7=h14c3975_1000
-  - xorg-libxau=1.0.9=h14c3975_0
-  - xorg-libxext=1.3.4=h516909a_0
-  - xorg-libxfixes=5.0.3=h516909a_1004
-  - xorg-libxi=1.7.10=h516909a_0
-  - xorg-xextproto=7.3.0=h14c3975_1002
-  - xorg-xproto=7.0.31=h14c3975_1007
   - xz=5.2.4=h14c3975_4
   - yaml=0.1.7=had09818_2
   - zlib=1.2.11=h7b6447c_3
   - zstd=1.3.7=h0b5b093_0
   - pip:
-    - appdirs==1.4.3
     - atomicwrites==1.3.0
     - attrs==19.1.0
-    - backcall==0.1.0
-    - black==19.3b0
-    - chardet==3.0.4
     - click==7.0
     - cloudpickle==1.2.1
     - colorama==0.4.1
-    - decorator==4.4.0
     - filelock==3.0.12
     - funcsigs==1.0.2
     - future==0.17.1
     - gym==0.14.0
-    - idna==2.8
-    - importlib-metadata==0.18
-    - ipdb==0.12
-    - ipython==7.5.0
-    - ipython-genutils==0.2.0
-    - jedi==0.13.3
+    - importlib-metadata==0.19
     - more-itertools==7.2.0
-    - numpy==1.16.4
     - opencv-python==4.1.0.25
     - packaging==19.1
-    - parso==0.5.0
-    - pexpect==4.7.0
-    - pickleshare==0.7.5
     - pluggy==0.12.0
-    - prompt-toolkit==2.0.9
     - protobuf==3.9.1
     - psutil==5.6.3
-    - ptyprocess==0.6.0
     - py==1.8.0
-    - py-spy==0.1.11
     - pyglet==1.3.2
-    - pygments==2.4.2
     - pyparsing==2.4.2
-    - pytest==5.0.1
-    - python-jsonrpc-server==0.1.2
-    - python-language-server==0.27.0
-    - pyyaml==5.1.2
+    - pytest==5.1.0
     - ray==0.7.3
     - redis==3.3.7
-    - requests==2.22.0
-    - scipy==1.3.0
-    - setproctitle==1.1.10
-    - tensorboardx==1.7
-    - toml==0.10.0
-    - traitlets==4.3.2
-    - urllib3==1.25.3
-    - wcwidth==0.1.7
-    - yapf==0.27.0
-    - zipp==0.5.1
+    - tensorboardx==1.8
+    - zipp==0.5.2
 prefix: /home/ethanbro/miniconda3/envs/ppo
 
