--- a/tune.yaml
+++ b/tune.yaml
@@ -1,15 +1,15 @@
 # An unique identifier for the head node and workers of this cluster.
-cluster_name: default
+cluster_name: rldl
 
 ## NOTE: Typically for local clusters, min_workers == initial_workers == max_workers.
 
 # The minimum number of workers nodes to launch in addition to the head
 # node. This number should be >= 0.
 # Typically, min_workers == initial_workers == max_workers.
-min_workers: 3
+min_workers: 0
 # The initial number of worker nodes to launch in addition to the head node.
 # Typically, min_workers == initial_workers == max_workers.
-initial_workers: 16
+initial_workers: 8
 
 # The maximum number of workers nodes to launch in addition to the head node.
 # This takes precedence over min_workers.
@@ -25,10 +25,10 @@ idle_timeout_minutes: 5
 # This executes all commands on all nodes in the docker container,
 # and opens all the necessary ports to support the Ray cluster.
 # Empty string means disabled. Assumes Docker is installed.
-#docker:
-    #image: "" # e.g., tensorflow/tensorflow:1.5.0-py3
-    #container_name: "" # e.g. ray_docker
-    #run_options: []  # Extra options to pass into "docker run"
+docker:
+    image: "ppo" # e.g., tensorflow/tensorflow:1.5.0-py3
+    container_name: "" # e.g. ray_docker
+    run_options: []  # Extra options to pass into "docker run"
 
 # Local specific configuration.
 provider:
@@ -59,11 +59,12 @@ file_mounts: {
 # List of commands that will be run before `setup_commands`. If docker is
 # enabled, these commands will run outside the container and before docker
 # is setup.
-initialization_commands: []
+initialization_commands: 
+  - cd ~/ppo
+  - git pull
 
 # List of shell commands to run to set up each nodes.
-setup_commands:
-    - cd ~/ppo
+setup_commands: []
 
 # Custom commands that will be run on the head node after common setup.
 head_setup_commands: []
