--- a/tune.yaml
+++ b/tune.yaml
@@ -34,26 +34,26 @@ docker:
 provider:
     type: local
     head_ip: 141.212.113.180
-    worker_ips: [
- #141.212.113.88, # rldl1 down
- 141.213.3.138, # rldl2 
- #141.213.3.134, # rldl3 risto
- 141.213.3.21, # rldl4 
- 141.213.3.28, # rldl5 
- 141.213.3.27, # rldl6 
- 141.213.3.130, # rldl7 
- 141.213.3.4, # rldl8 
- 141.212.113.254, # rldl9 
- 141.212.113.23, # rldl10 
- 141.212.113.249, # rldl11 
- 141.212.113.98, # rldl12 
- 141.213.3.71, # rldl13 
- 141.212.113.59, # rldl14 
- 141.212.113.250, # rldl15 
- 141.212.113.173, # rldl16 
- 141.212.113.180, # rldl17 
+    worker_ips:      
+    - #141.212.113.88 # rldl1 down
+    - 141.213.3.138 # rldl2 
+    - #141.213.3.134 # rldl3 risto
+    - 141.213.3.21 # rldl4 
+    - 141.213.3.28 # rldl5 
+    - 141.213.3.27 # rldl6 
+    - 141.213.3.130 # rldl7 
+    - 141.213.3.4 # rldl8 
+    - 141.212.113.254 # rldl9 
+    - 141.212.113.23 # rldl10 
+    - 141.212.113.249 # rldl11 
+    - 141.212.113.98 # rldl12 
+    - 141.213.3.71 # rldl13 
+    - 141.212.113.59 # rldl14 
+    - 141.212.113.250 # rldl15 
+    - 141.212.113.173 # rldl16 
+    - 141.212.113.180 # rldl17 
 
-    ]
+
 
 # How Ray will authenticate with newly launched nodes.
 auth:
@@ -68,10 +68,9 @@ worker_nodes: {}
 
 # Files or directories to copy to the head and worker nodes. The format is a
 # dictionary from REMOTE_PATH: LOCAL_PATH, e.g.
-file_mounts: {
+file_mounts: []
 #    "/path1/on/remote/machine": "/path1/on/local/machine",
 #    "/path2/on/remote/machine": "/path2/on/local/machine",
-}
 
 # List of commands that will be run before `setup_commands`. If docker is
 # enabled, these commands will run outside the container and before docker
