--- a/tune.yaml
+++ b/tune.yaml
@@ -27,7 +27,7 @@ idle_timeout_minutes: 5
 # Empty string means disabled. Assumes Docker is installed.
 docker:
     image: "ppo" # e.g., tensorflow/tensorflow:1.5.0-py3
-    container_name: "" # e.g. ray_docker
+    container_name: "ray_docker" # e.g. ray_docker
     run_options: []  # Extra options to pass into "docker run"
 
 # Local specific configuration.
@@ -51,7 +51,7 @@ provider:
     - 141.212.113.59 # rldl14 
     - 141.212.113.250 # rldl15 
     - 141.212.113.173 # rldl16 
-    - 141.212.113.180 # rldl17 
+    # 141.212.113.180 # rldl17 Head
 
 
 
@@ -68,7 +68,7 @@ worker_nodes: {}
 
 # Files or directories to copy to the head and worker nodes. The format is a
 # dictionary from REMOTE_PATH: LOCAL_PATH, e.g.
-file_mounts: []
+file_mounts: {}
 #    "/path1/on/remote/machine": "/path1/on/local/machine",
 #    "/path2/on/remote/machine": "/path2/on/local/machine",
 
