--- a/tune.yaml
+++ b/tune.yaml
@@ -34,20 +34,20 @@ docker:
 provider:
     type: local
     head_ip: 141.213.3.138
-    worker_ips: []
+    worker_ips: 
     # 141.212.113.88 # rldl1 down
-    #- 141.213.3.138 # rldl2 
+    - 141.213.3.138 # rldl2 
     # 141.213.3.134 # rldl3 risto
     #- 141.213.3.21 # rldl4 
     ## 141.213.3.28 # rldl5 no access
-    #- 141.213.3.27 # rldl6 
-    #- 141.213.3.130 # rldl7 
-    #- 141.213.3.4 # rldl8 
-    #- 141.212.113.254 # rldl9 
+    - 141.213.3.27 # rldl6 
+    - 141.213.3.130 # rldl7 
+    - 141.213.3.4 # rldl8 
+    - 141.212.113.254 # rldl9 
     ## 141.212.113.23 # rldl10 Max
     #- 141.212.113.249 # rldl11 
-    #- 141.212.113.98 # rldl12 
-    #- 141.213.3.71 # rldl13 
+    - 141.212.113.98 # rldl12 
+    - 141.213.3.71 # rldl13 
     #- 141.212.113.59 # rldl14 
     #- 141.212.113.250 # rldl15 
     #- 141.212.113.173 # rldl16 
