--- a/tune.yaml
+++ b/tune.yaml
@@ -9,12 +9,12 @@ cluster_name: local-default
 min_workers: 0
 # The initial number of worker nodes to launch in addition to the head node.
 # Typically, min_workers == initial_workers == max_workers.
-#initial_workers: 1
+initial_workers: 56
 
 # The maximum number of workers nodes to launch in addition to the head node.
 # This takes precedence over min_workers.
 # Typically, min_workers == initial_workers == max_workers.
-max_workers: 2
+max_workers: 70
 
 # Autoscaling parameters.
 # Ignore this if min_workers == initial_workers == max_workers.
@@ -26,32 +26,32 @@ idle_timeout_minutes: 5
 # and opens all the necessary ports to support the Ray cluster.
 # Empty string means disabled. Assumes Docker is installed.
 docker:
-    image: ethanabrooks/ppo-repo:ppo
-    container_name: ppo
+    image: ethanabrooks/ppo-repo:latest
+    container_name: latest
     run_options: []  # Extra options to pass into "docker run"
 
 # Local specific configuration.
 provider:
     type: local
-    head_ip: 141.213.3.138
+    head_ip: 141.212.113.98
     worker_ips: 
     # 141.212.113.88 # rldl1 down
     - 141.213.3.138 # rldl2 
     # 141.213.3.134 # rldl3 risto
     #- 141.213.3.21 # rldl4 
-    ## 141.213.3.28 # rldl5 no access
+    # 141.213.3.28 # rldl5 no access
     - 141.213.3.27 # rldl6 
     - 141.213.3.130 # rldl7 
     - 141.213.3.4 # rldl8 
     - 141.212.113.254 # rldl9 
-    ## 141.212.113.23 # rldl10 Max
-    #- 141.212.113.249 # rldl11 
-    - 141.212.113.98 # rldl12 
+    # 141.212.113.23 # rldl10 Max
+    - 141.212.113.249 # rldl11 
+    #- 141.212.113.98 # rldl12  HEAD
     - 141.213.3.71 # rldl13 
     #- 141.212.113.59 # rldl14 
     #- 141.212.113.250 # rldl15 
     #- 141.212.113.173 # rldl16 
-    # 141.212.113.180 # rldl17 Head
+    # 141.212.113.180 # rldl17
 
 
 
@@ -76,7 +76,7 @@ file_mounts: {}
 # enabled, these commands will run outside the container and before docker
 # is setup.
 initialization_commands: 
-  - docker pull ethanabrooks/ppo-repo:my-tag
+  - docker pull ethanabrooks/ppo-repo:latest
 
 # List of shell commands to run to set up each nodes.
 # Runs first inside docker
