--- a/tune.yaml
+++ b/tune.yaml
@@ -9,12 +9,12 @@ cluster_name: local-default
 min_workers: 0
 # The initial number of worker nodes to launch in addition to the head node.
 # Typically, min_workers == initial_workers == max_workers.
-initial_workers: 56
+initial_workers: 14
 
 # The maximum number of workers nodes to launch in addition to the head node.
 # This takes precedence over min_workers.
 # Typically, min_workers == initial_workers == max_workers.
-max_workers: 70
+max_workers: 16
 
 # Autoscaling parameters.
 # Ignore this if min_workers == initial_workers == max_workers.
@@ -33,20 +33,20 @@ docker:
 # Local specific configuration.
 provider:
     type: local
-    head_ip: 141.212.113.98
+    head_ip: 141.213.3.27
     worker_ips: 
     # 141.212.113.88 # rldl1 down
     - 141.213.3.138 # rldl2 
     # 141.213.3.134 # rldl3 risto
     #- 141.213.3.21 # rldl4 
     # 141.213.3.28 # rldl5 no access
-    - 141.213.3.27 # rldl6 
-    - 141.213.3.130 # rldl7 
-    - 141.213.3.4 # rldl8 
-    - 141.212.113.254 # rldl9 
+    #- 141.213.3.27 # rldl6 HEAD
+    #- 141.213.3.130 # rldl7 
+    #- 141.213.3.4 # rldl8 
+    #- 141.212.113.254 # rldl9 
     # 141.212.113.23 # rldl10 Max
-    - 141.212.113.249 # rldl11 
-    #- 141.212.113.98 # rldl12  HEAD
+    #- 141.212.113.249 # rldl11 
+    ##- 141.212.113.98 # rldl12 
     - 141.213.3.71 # rldl13 
     #- 141.212.113.59 # rldl14 
     #- 141.212.113.250 # rldl15 
