--- a/tune.yaml
+++ b/tune.yaml
@@ -28,26 +28,27 @@ idle_timeout_minutes: 5
 docker:
     image: ethanabrooks/ppo-repo:latest
     container_name: latest
-    run_options: []  # Extra options to pass into "docker run"
+    run_options: ["--gpus all"]  # Extra options to pass into "docker run"
 
 # Local specific configuration.
 provider:
     type: local
-    head_ip: 141.213.3.27
-    worker_ips: 
-    # 141.212.113.88 # rldl1 down
-    - 141.213.3.138 # rldl2 
+    head_ip: 141.213.3.4
+    worker_ips: []
+    # 141.212.113.88 # rldl1 
+    #- 141.213.3.138 # rldl2 nvidia-docker error (nvidia-container-cli:
+    #requirement error: unsatisfied condition: brand = tesla)
     # 141.213.3.134 # rldl3 risto
-    #- 141.213.3.21 # rldl4 
+    #- 141.213.3.21 # rldl4 risto
     # 141.213.3.28 # rldl5 no access
-    #- 141.213.3.27 # rldl6 HEAD
-    #- 141.213.3.130 # rldl7 
-    #- 141.213.3.4 # rldl8 
+    #- 141.213.3.27 # rldl6 nvidia-docker installation issue (/boot is full)
+    #- 141.213.3.130 # rldl7 CPU
+    #- 141.213.3.4 # rldl8 HEAD
     #- 141.212.113.254 # rldl9 
     # 141.212.113.23 # rldl10 Max
     #- 141.212.113.249 # rldl11 
     ##- 141.212.113.98 # rldl12 
-    - 141.213.3.71 # rldl13 
+    #- 141.213.3.71 # rldl13 
     #- 141.212.113.59 # rldl14 
     #- 141.212.113.250 # rldl15 
     #- 141.212.113.173 # rldl16 
