--- a/tune.yaml
+++ b/tune.yaml
@@ -3,8 +3,7 @@ cluster_name: local-default
 
 ## NOTE: Typically for local clusters, min_workers == initial_workers == max_workers.
 
-# The minimum number of workers nodes to launch in addition to the head
-# node. This number should be >= 0.
+# The minimum number of workers nodes to launch in addition to the head node. This number should be >= 0.
 # Typically, min_workers == initial_workers == max_workers.
 min_workers: 0
 # The initial number of worker nodes to launch in addition to the head node.
@@ -33,7 +32,7 @@ docker:
 # Local specific configuration.
 provider:
     type: local
-    head_ip: 141.213.3.4
+    head_ip: 141.212.113.254
     worker_ips: []
     # 141.212.113.88 # rldl1 
     #- 141.213.3.138 # rldl2 nvidia-docker error (nvidia-container-cli:
@@ -43,7 +42,7 @@ provider:
     # 141.213.3.28 # rldl5 no access
     #- 141.213.3.27 # rldl6 nvidia-docker installation issue (/boot is full)
     #- 141.213.3.130 # rldl7 CPU
-    #- 141.213.3.4 # rldl8 HEAD
+    #- 141.213.3.4 # rldl8
     #- 141.212.113.254 # rldl9 
     # 141.212.113.23 # rldl10 Max
     #- 141.212.113.249 # rldl11 
